--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
@@ -28,8 +36,29 @@
     </style>
   </head>
   <body>
-    Build The Community Your Fans Will Love Huddle re-imagines the way we build
-    communities. You have a voice, but so does your audience. Create connections
-    with your users as you engage in genuine discussion. Register
+    <div class="inicial">
+      <div class="title">
+        <img src="./images/logo.svg" alt="" />
+      </div>
+      <div class="inicial_img">
+        <img src="./images/illustration-mockups.svg" alt="" />
+      </div>
+      <div class="inicial_text">
+        <h2>Build The Community Your Fans Will Love</h2>
+        <p>
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
+          engage in genuine discussion.
+        </p>
+      </div>
+      <div class="inicial_button">
+        <button><a href="">Register</a></button>
+      </div>
+      <div class="inicial_social">
+        <a href=""><img src="./images/icons8-facebook.png" alt="" /></a>
+        <a href=""><img src="./images/icons8-twitter_squared.png" alt="" /></a>
+        <a href=""><img src="./images/icons8-instagram.png" alt="" /></a>
+      </div>
+    </div>
   </body>
 </html>
