Finalizando landing page desktop

--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
-
     <!-- No dude en eliminar estos estilos o personalizarlos en su propia hoja de estilo 👍 -->
-    <style>
+    <!-- <style>
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -33,26 +32,28 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <div class="inicial">
       <div class="title">
         <img src="./images/logo.svg" alt="" />
       </div>
-      <div class="inicial_img">
-        <img src="./images/illustration-mockups.svg" alt="" />
-      </div>
-      <div class="inicial_text">
-        <h2>Build The Community Your Fans Will Love</h2>
-        <p>
-          Huddle re-imagines the way we build communities. You have a voice, but
-          so does your audience. Create connections with your users as you
-          engage in genuine discussion.
-        </p>
-      </div>
-      <div class="inicial_button">
-        <button><a href="">Register</a></button>
+      <div class="inicial_container">
+        <div class="inicial_img">
+          <img src="./images/illustration-mockups.svg" alt="" />
+        </div>
+        <div class="inicial_text">
+          <h2>Build The Community Your Fans Will Love</h2>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
+          <div class="inicial_button">
+            <button><a href="">Register</a></button>
+          </div>
+        </div>
       </div>
       <div class="inicial_social">
         <a href=""><img src="./images/icons8-facebook.png" alt="" /></a>
