--- a/index.html
+++ b/index.html
@@ -4,62 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="./css/style.css" />
+
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
-    <!-- No dude en eliminar estos estilos o personalizarlos en su propia hoja de estilo 👍 -->
-    <!-- <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style> -->
   </head>
   <body>
-    <div class="inicial">
-      <div class="title">
+    <header>
+      <picture class="header__left">
         <img src="./images/logo.svg" alt="" />
-      </div>
-      <div class="inicial_container">
-        <div class="inicial_img">
-          <img src="./images/illustration-mockups.svg" alt="" />
-        </div>
-        <div class="inicial_text">
-          <h2>Build The Community Your Fans Will Love</h2>
-          <p>
-            Huddle re-imagines the way we build communities. You have a voice,
-            but so does your audience. Create connections with your users as you
-            engage in genuine discussion.
-          </p>
-          <div class="inicial_button">
-            <button><a href="">Register</a></button>
-          </div>
-        </div>
-      </div>
-      <div class="inicial_social">
-        <a href=""><img src="./images/icons8-facebook.png" alt="" /></a>
-        <a href=""><img src="./images/icons8-twitter_squared.png" alt="" /></a>
-        <a href=""><img src="./images/icons8-instagram.png" alt="" /></a>
-      </div>
-    </div>
+      </picture>
+      <picture class="header__right">
+        <img src="" alt="" />
+      </picture>
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
