--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
       href="./images/favicon-32x32.png"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/f36eb23440.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./css/style.css" />
 
     <title>
@@ -26,10 +30,26 @@
         <img src="./images/logo.svg" alt="" />
       </picture>
       <picture class="header__right">
-        <img src="" alt="" />
+        <img src="./images/illustration-mockups.svg" alt="" />
       </picture>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section class="main__section">
+        <h2>Build The Community Your Fans Will Love</h2>
+        <p>
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
+          engage in genuine discussion.
+        </p>
+        <button>Register</button>
+      </section>
+    </main>
+    <footer>
+      <div class="footer__container">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
+    </footer>
   </body>
 </html>
