ajustando mobile fisrt

--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
       <picture class="header__left">
         <img src="./images/logo.svg" alt="" />
       </picture>
-      <picture class="header__right">
-        <img src="./images/illustration-mockups.svg" alt="" />
-      </picture>
     </header>
     <main>
+      <section class="main__image">
+        <picture class="main__image--container">
+          <img src="./images/illustration-mockups.svg" alt="" />
+        </picture>
+      </section>
       <section class="main__section">
         <h2>Build The Community Your Fans Will Love</h2>
         <p>
