se agrega breakpoint de 1440 y se ajusta landing page a dsktop

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/style.css" />
-
+    <link
+      rel="stylesheet"
+      href="./css/desktopt.css"
+      media="(min-width: 1440px)"
+    />
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
@@ -27,13 +31,16 @@
   <body>
     <header>
       <picture class="header__left">
-        <img src="./images/logo.svg" alt="" />
+        <img src="./images/logo.svg" alt="imagen logo Huddle" />
       </picture>
     </header>
     <main>
       <section class="main__image">
         <picture class="main__image--container">
-          <img src="./images/illustration-mockups.svg" alt="" />
+          <img
+            src="./images/illustration-mockups.svg"
+            alt="imagen de un mockup"
+          />
         </picture>
       </section>
       <section class="main__section">
